@@ -1,6 +1,7 @@
 2007-09-03  Martin Lambers <marlam@marlam.de>
 
 	* Allow to save/load parameter sets.
+	* Use CVLTonemap instead of CVLToneMap internally.
 
 2007-08-31  Martin Lambers <marlam@marlam.de>
 
